--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,11 @@
-@tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer tailwind {
+  @tailwind base;
+}
+
+@import "@mantine/core/styles.css";
 
 :root {
 	--foreground-rgb: 0, 0, 0;
@@ -20,10 +25,4 @@ body {
 	color: rgb(var(--foreground-rgb));
 	background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb)))
 		rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-	.text-balance {
-		text-wrap: balance;
-	}
 }
