Added the flex option to the TakeAction block. Added types as well.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,10 @@
 @tailwind utilities;
 
 @layer tailwind {
-  @tailwind base;
+	@tailwind base;
 }
 
-@import "@mantine/core/styles.css";
+@import '@mantine/core/styles.css';
 
 :root {
 	--foreground-rgb: 0, 0, 0;
