--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,7 @@
 }
 
 body {
+	background-color: white;
 	color: rgb(var(--foreground-rgb));
 	background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb)))
 		rgb(var(--background-start-rgb));
